src/objects/Center_Information__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_ADA_Cost_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ADA Cost Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Bulk_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that will control whether or now we allow the bulk printing section to display. If this is unchecked, an error message will display telling people that printing is disabled for this location</description>
        <label>Allow Bulk Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Center_Selection__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls if the center will appear in the center lookup on leads.</description>
        <label>Allow Center Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Dymo_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Dymo Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_SD_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggles whether we allow SD scheduling in the consult calendar</description>
        <label>Allow SD Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aval_Cnslts_2nd_Week__c</fullName>
        <description>Shows the number of consults avaliable two weeks out</description>
        <label>Aval Cnslts 2nd Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aval_Cnslts_3rd_Week__c</fullName>
        <description>Shows the number of avaliable consults three weeks out</description>
        <label>Aval Cnslts 3rd Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aval_Cnslts_4th_Week__c</fullName>
        <description>Shows the number of avaliable consults four weeks out</description>
        <label>Aval Cnslts 4th Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aval_Cnslts_Next_Week__c</fullName>
        <description>Shows the number of consults avaliable for the next week</description>
        <label>Aval Cnslts Next Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aval_Cnslts_This_Week__c</fullName>
        <description>Nmber of avaliable consults in the current week</description>
        <label>Aval Cnslts This Week</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCP_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the center to use for BCP letter/email details.  Primarily used for Network Centers</description>
        <label>BCP Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Information (BCP Center)</relationshipLabel>
        <relationshipName>Center_Information2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baseline_Target_CPC__c</fullName>
        <label>Baseline Target CPC</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_Target__c</fullName>
        <description>Used for the new commission program 1/27/2015.  This number track the baseline target tier value.  All other numbers are derived from this.</description>
        <label>Baseline Target TCR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Battle_Group_Stars__c</fullName>
        <formula>Battlegroup_Stars__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Battle Group Stars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Battlegroup_Stars__c</fullName>
        <label>Battlegroup Stars</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch_ID__c</fullName>
        <description>This is the branch id of the center, used to help simplify reporting for payroll and accounting in Paychex.</description>
        <label>Branch_ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Clipboard_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the center to skip the confirmation step when clicking on the clipboard icon in the clinical calendar</description>
        <label>Bypass Clipboard Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAdmin__c</fullName>
        <label>CAdmin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Name__c</fullName>
        <description>Short version of center name to display in the calendar</description>
        <label>Calendar Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center_Marketing__c</fullName>
        <label>Call Center / Marketing</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Center_Alerts__c</fullName>
        <description>Field to hold any potential alerts for a given center.  These alerts will pop up on the center information section in the prospective patient layout.</description>
        <label>Center Alerts</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Close_Date__c</fullName>
        <label>Center Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Center_Open_Date__c</fullName>
        <label>Center Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Center_Webpage__c</fullName>
        <description>Website URL to Center&apos;s Webpage</description>
        <label>Center Webpage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearConnect_Subscription_ID__c</fullName>
        <label>ClearConnect Subscription ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearConnect_UserName__c</fullName>
        <description>ClearConnect UserName</description>
        <label>ClearConnect UserName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearConnect_UserPass__c</fullName>
        <label>ClearConnect UserPass</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_End_Hour__c</fullName>
        <label>Clinical End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Start_Hour__c</fullName>
        <label>Clinical Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmation_Email_Address__c</fullName>
        <description>The email address that will receive a confirmation message whenever someone gets scheduled for a consultation at this center. Mainly used with Network Centers</description>
        <label>Confirmation Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DEC__c</fullName>
        <label>DEC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>Center Information</relationshipLabel>
        <relationshipName>Center_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Out_HopeRX__c</fullName>
        <label>Days Out HopeRX</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_POT_Tab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default POT Tab</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Information2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental_Implants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center provides Dental Implant services</description>
        <label>Dental Implants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dentures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if the center offers denture services</description>
        <label>Dentures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directions__c</fullName>
        <label>Directions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Full_Patient_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Full Patient Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor_1_Type__c</fullName>
        <label>Doctor 1 - Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult Dr</fullName>
                </value>
                <value>
                    <fullName>Expert Practitioner</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>OS</fullName>
                </value>
                <value>
                    <fullName>Pros</fullName>
                </value>
                <value>
                    <fullName>Pros Trained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_1__c</fullName>
        <label>Doctor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_2_Type__c</fullName>
        <label>Doctor 2 - Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult Dr</fullName>
                </value>
                <value>
                    <fullName>Expert Practitioner</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>OS</fullName>
                </value>
                <value>
                    <fullName>Pros</fullName>
                </value>
                <value>
                    <fullName>Pros Trained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_2__c</fullName>
        <label>Doctor 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_3_Type__c</fullName>
        <label>Doctor 3 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult Dr</fullName>
                </value>
                <value>
                    <fullName>Expert Practitioner</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>OS</fullName>
                </value>
                <value>
                    <fullName>Pros</fullName>
                </value>
                <value>
                    <fullName>Pros Trained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_3__c</fullName>
        <label>Doctor 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Code__c</fullName>
        <description>ClearConnect Doctor Code</description>
        <label>Doctor Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoseSpot_Clinic_ID__c</fullName>
        <label>DoseSpot Clinic ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoseSpot_Clinic_Key__c</fullName>
        <description>Value required for communicating with DoseSpot API</description>
        <label>DoseSpot Clinic Key</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_SubCode_2__c</fullName>
        <description>InfoCision Experian SubCode</description>
        <label>Experian SubCode (InfoCision)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_SubCode__c</fullName>
        <label>Experian SubCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Label__c</fullName>
        <label>Finance Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if the center offers financing options</description>
        <label>Financing Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street_1__c &amp; &quot; &quot; &amp; 
Street_2__c &amp; BR() &amp; 
City__c &amp; &quot;, &quot; &amp; TEXT(State__c) &amp; &quot; &quot; &amp; Zip_Code__c</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_City__c</fullName>
        <label>Future City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Map_Directions__c</fullName>
        <label>Future Map &amp; Directions</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Future_State__c</fullName>
        <label>Future State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Street_1__c</fullName>
        <label>Future Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Street_2__c</fullName>
        <label>Future Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Zip_Code__c</fullName>
        <label>Future Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Office_Count__c</fullName>
        <label>GP Office Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Dentistry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center offers general dentistry</description>
        <label>General Dentistry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_End_Hour__c</fullName>
        <description>Field to control the end of the clinical calendar for days prior to 5/22/2018.  This is being done in large part,  to handle bad historical data imported from Windent.</description>
        <label>Historical End Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Start_Hour__c</fullName>
        <description>Field to control the start of the clinical calendar for days prior to 5/22/2018.  This is being done in large part,  to handle bad historical data imported from Windent.</description>
        <label>Historical Start Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HopeRx_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Center a HopeRx Center?</description>
        <label>HopeRx Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HopeRx_Go_Live_Date__c</fullName>
        <description>Date When HRX went live</description>
        <label>HopeRx Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hope_RX_Sending_Email__c</fullName>
        <label>Hope RX Sending Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ideal_Week_Certification_Date__c</fullName>
        <label>Ideal Week Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ideal_Week_Certified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ideal Week Certified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Information_Certified_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_House_Payment_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center offers in house payment plans</description>
        <label>In House Payment Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center accepts insurance</description>
        <label>Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_RX_display_PHI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab RX display PHI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_HopeRx_Inventory_Check__c</fullName>
        <label>Last HopeRx Inventory Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Launch_Hand_off_Date__c</fullName>
        <description>This is the date that the center leaves the &quot;launch&quot; region and becomes a part of the region it occupies geographically. This is key for the comp plan of the Launch Support team.</description>
        <label>Launch Hand off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leadership_Impact_Assessment_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leadership Impact Assessment By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Information_LIA_Assessor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leadership_Impact_Assessment_Date__c</fullName>
        <label>Leadership Impact Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>The legal entity name for the center. Used when auto-populating legal documents</description>
        <label>Legal Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lending_Club_Client_ID__c</fullName>
        <label>Lending Club Client ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Address__c</fullName>
        <formula>Street_1__c &amp; &quot; &quot; &amp; 
Street_2__c &amp; BR() &amp; 
City__c &amp; &quot;, &quot; &amp; TEXT(State__c) &amp; &quot; &quot; &amp; Zip_Code__c</formula>
        <label>Letter Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Front_Desk__c</fullName>
        <label>Local Front Desk</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <description>ClearConnect Location Code</description>
        <label>Location Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintain_HopeRX_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintain HopeRX Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Sched_Auto_Reduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Sched Auto Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MapGoogle__c</fullName>
        <formula>HYPERLINK( 

&quot;https://www.google.com/maps?q=&quot; 

&amp; SUBSTITUTE(Street_1__c, &apos; &apos;, &apos;+&apos;) 
&amp;&quot;,+&quot; 
&amp; SUBSTITUTE(City__c, &apos; &apos;, &apos;+&apos;) 
&amp;&quot;,+&quot; 
&amp; SUBSTITUTE(TEXT(State__c), &apos; &apos;, &apos;+&apos;) 
, &quot;Google Map&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Google</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Directions_URL_Spanish__c</fullName>
        <label>Map &amp; Directions URL (Spanish)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Map_Directions_URL__c</fullName>
        <label>Map &amp; Directions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Center</relationshipLabel>
        <relationshipName>Center_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medicaid_Medicare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicaid/Medicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_Customer_ID__c</fullName>
        <label>NS Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Location_Code__c</fullName>
        <label>NS Location Code</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Scheduled_Transfer_Note__c</fullName>
        <description>Note displayed at the top for network centers</description>
        <label>Not Scheduled Transfer Note</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Lab_Techs__c</fullName>
        <label>Number of Lab Techs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offers_Treatment_Packages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that this center offers special treatment packages, like the &apos;Rejuvenation&apos; packages started in Las Vegas.</description>
        <label>Offers Treatment Packages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Cultural_Inventory__c</fullName>
        <label>Organization Cultural Inventory</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orthodontics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center offers Orthodontics</description>
        <label>Orthodontics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outbound_Phone_Number__c</fullName>
        <label>Outbound Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PD_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Information3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PEC_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PEC 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PEC_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PEC 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Center_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performs_AO4__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the center offers AO4</description>
        <label>Performs - AO4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performs_Multiple_Implants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the center offers Multiple Implants</description>
        <label>Performs - Multiple Implants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performs_Post_Op_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the center offers Post Op Checks</description>
        <label>Performs - Post Op Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performs_Pros_Exams__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the center offers Pros Exams</description>
        <label>Performs - Pros Exams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performs_Single_Implants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the center offers Single Implants</description>
        <label>Performs - Single Implants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periodontics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the center offers Periodontics</description>
        <label>Periodontics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Priv_Consent_executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practice Priv Consent executed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Privileges_Email__c</fullName>
        <description>Email address for Practice Privileges messages to go out to the RBD and doctors at this location</description>
        <label>Practice Privileges Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prosth_Exam_Center_AO4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prosth Exam Center (AO4)</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Information (Prosth Exam Center (AO4))</relationshipLabel>
        <relationshipName>Center_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prosth_Exam_Center_Single_Multiple__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prosth Exam Center (Single/Multiple)</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Center Information</relationshipLabel>
        <relationshipName>Center_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarterly_CPC_Target__c</fullName>
        <description>This field keeps track of the quarterly CPC target for a center (used in operations manager bonus calcuations starting Q2 2017).</description>
        <label>Quarterly CPC Target</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Track_1_Fee_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The Fee we will be paying to the GP Office on referrals that start</description>
        <label>Referral Track 1 Fee Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral_Track_2_Fee_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The Fee we will be paying to the GP Office on referrals that start - Track 2</description>
        <label>Referral Track 2 Fee Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region (Lookup)</label>
        <referenceTo>Sales_Region__c</referenceTo>
        <relationshipLabel>Center Information</relationshipLabel>
        <relationshipName>Center_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_Text_Phone_1_Gold_Leads__c</fullName>
        <description>Phone number text messages for gold leads will go to</description>
        <label>SMS Text Phone 1 (Gold Leads)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Text_Phone_2_Gold_Leads__c</fullName>
        <label>SMS Text Phone 2 (Gold Leads)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Text_Phone_3_Gold_Leads__c</fullName>
        <label>SMS Text Phone 3 (Gold Leads)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sets the sales target for the center.</description>
        <label>Sales Target</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Center Information (Sales Market)</relationshipLabel>
        <relationshipName>Center_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>